# system-testing-workshop

./: .gitignore  Dockerfile  pyproject.toml  readme.md
System-Testing-Deemo/: Dockerfile
System-Testing-Deemo/tests/: demo_test.feature
System-Testing-Demo-BDD/: .gitignore  docker-compose.yml
System-Testing-Demo-BDD/tests/: conftest.py
System-Testing-Demo-BDD/tests/feature/: test_public_api.py
tests/demo/backend_test_demo/: test_site_capabilities_health.py  test_srcnet_api_health.feature
tests/demo/ui_test_demo/: test_site_capabilities_ui.feature  test_site_capabilities_ui.py
tests/feature/: test_public_api.feature
